fix: update all

--- a/src/styles/tiptab.less
+++ b/src/styles/tiptab.less
@@ -13,6 +13,12 @@
     pointer-events: none;
     height: 0;
   }
+  mark {
+    background-color: #faf594;
+    border-radius: 0.4rem;
+    box-decoration-break: clone;
+    padding: 0.1rem 0.3rem;
+  }
 }
 
 .tippy-content {
@@ -106,13 +112,9 @@ button.t-btn {
 }
 
 .btn-change-color {
-  height: 36px;
-  width: 36px;
-  border-radius: 4px;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
   flex-direction: column;
-  background-color: transparent;
 }
